# aenimal-tools

./: Makefile.am  configure.ac
src/: Makefile.am  factor.c  factor.h  integer-private.h  integer.c  integer.h  simple_vector.c  simple_vector.h
tests/: Makefile.am  check_integer.c
